<resources>
    <string name="app_name">Walmart Test App</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="product_review_count">Product Review Count</string>
    <string name="product_rating">Product Rating</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="about_this_item">About This Item</string>
</resources>
